css/panels/_base.scss
/* ... */
.carousel-right-control.png {
	background-position: -54px -63px;
	width: 38px;
	height: 100px;
}*/


@media only screen and ( max-width: 62.5em ) /* 1000 */
{
	#nav
	{
		width: 100%;
		position: static;
		margin: 0;
	}
}



@media only screen and ( max-width: 1270px )  {
	
	.panels-display  {
	
		.panels-photo {
			width: 65%;
		}
	
		.panel-description {
				width: 31%;	
				margin-right: 20px;
		}
	
		nav {
			width: 40px;

		}
	}	
	
}

@media only screen and ( max-width: 1021px )  {
	
	.panels-display  {
	
		.panels-photo {
			width: 60%;
		}
	
		.panel-description {
				width: 34%;	
				margin-right: 20px;
		}
	
		nav {
			width: 40px;

		}
	}	
	
}



@media only screen and ( max-width: 857px )  {


	.page.panels {

		header {

			#search-panels {
				top: 45px;
				right: 0;
				background-color: $gray;

				input[type="text"] {
				}

				input[type="submit"] {
					margin-right: 7px;
				}
			}
		}
	}
	
}




@media only screen and ( max-width: 767px )  {



//Carousel
.carousel-left-limit {
	
	display: none;
}

.carousel-right-limit {
	
	display: none;
}

.rs-carousel {
	
	ul {
		
		
		
		li {

			margin-right: 25px;
			
			&:first-child {
				margin-left: 0;
			}
		}
		
	}
	
	.rs-carousel-action-prev {
		
		display: none;
	}
	
	.rs-carousel-action-next {
		
		display: none;
		
	}
	
	.rs-carousel-action-active {
		
		opacity: 1;
		display: none;
		

	}
}




}







@media only screen and ( max-width: 717px )  {
	
	.panels-display  {
	
		.panels-photo {
			width: 57%;
		}
	
		.panel-description {
				width: 36%;	
				margin-right: 20px;
		}
	
		nav {
			width: 40px;

		}
	}	
	
}




@media only screen and ( max-width: 40em ) /* 640 */
{

	.page.panels {

		header {
			
			#search-panels {
				top: -1px;
				right: 45px;
				background-color: none;


				input[type="text"] {
				}

				input[type="submit"] {
					margin-right: 0;
				}
			}
			
			
			#nav
			{
				position: relative;
				top: auto;
				left: auto;
			}
				#nav > a
				{
					width: 45px; /* 50 */
					height: 45px; /* 50 */
					text-align: left;
					text-indent: -9999px;
					background-color: $blueLight;
					position: relative;
				}
					#nav > a:before,
					#nav > a:after
					{
						position: absolute;
						border: 2px solid #fff;
						top: 35%;
						left: 25%;
						right: 25%;
						content: '';
					}
					#nav > a:after
					{
						top: 60%;
					}

				#nav:not( :target ) > a:first-of-type,
				#nav:target > a:last-of-type
				{
					display: block;
				}


			/* first level */

			#nav > ul
			{
				height: auto;
				display: none;
				position: absolute;
				left: 0;
				right: 0;
			}
				#nav:target > ul
				{
					display: block;
				}
				#nav > ul > li
				{
					width: 100%;
					float: none;
				}
					#nav > ul > li > a
					{
						height: auto;
						text-align: left;
						padding: 0 0.833em; /* 20 (24) */
					}
						#nav > ul > li:not( :last-child ) > a
						{
							border-right: none;
							border-bottom: 1px solid #cc470d;
						}


				/* second level */

				#nav li ul
				{
					position: static;
					padding: 1.25em; /* 20 */
					padding-top: 0;
				}
			}
		}
		

		
		
		.panels-display  {
			
			height: 400px !important;
		
		.panels-photo {
			width: 90%;
			height: 400px !important;
			margin-right: 10px;
		}
		
		.panel-description {
			width: auto;
			height: auto !important;
			overflow: hidden;
			height: 100%;
			margin-right: 0;
			clear: both;
		}
		
		
			nav {
				position: absolute;
				top: 0;
				right: 0;
				height: 400px !important;
				z-index: 99999;
				
			}
		}
	
}

